syntax = "proto3";
package pomegranate;

message StartDeploymentRequest {
  string deployment_uuid = 1;
}

message RestartDeploymentRequest {
  string deployment_uuid = 1;
}

message DeleteDeploymentRequest {
  string deployment_uuid = 1;
}

message StopDeploymentRequest {
  string deployment_uuid = 1;
}

message DeploymentStatusRequest {
  string deployment_uuid = 1;
  string status = 2;
}

message ApplyConfigDeploymentRequest {
  string deployment_uuid = 1;
  string config = 2;
}

message ResponseMessage {
  string message = 1;
}

service Pomegranate {
  rpc StartDeployment(StartDeploymentRequest) returns (ResponseMessage) {}
  rpc RestartDeployment(RestartDeploymentRequest) returns (ResponseMessage) {}
  rpc DeleteDeployment(DeleteDeploymentRequest) returns (ResponseMessage) {}
  rpc StopDeployment(StopDeploymentRequest) returns (ResponseMessage) {}
  rpc DeploymentStatus(DeploymentStatusRequest) returns (ResponseMessage) {}
  rpc ApplyConfigDeployment(ApplyConfigDeploymentRequest) returns (ResponseMessage) {}
}
